--- a/less/base/_vars.less
+++ b/less/base/_vars.less
@@ -8,7 +8,7 @@
     --font-main: "Open Sans", sans-serif;
     --font-title: "Cormorant", serif;
 
-    --bg-color: #1D2F30;
+    --bg-color: #1d2f30;
 
     --ui-click: #688B05;
     --ui-hover:#BAE249;
