add section news

--- a/less/blocks/_hero.less
+++ b/less/blocks/_hero.less
@@ -24,17 +24,6 @@
     max-width: 635px;
     margin-bottom: 19px;
 }
-.hero-link {
-    display: inline-flex;
-    align-items: center;
-    padding: 5px;
-    column-gap: 8px;
-}
-.link-text {
+.hero .link__text {
     color: var(--accent);
-    font-weight: bold;
-    align-self: center;
-}
-.link-icon {
-    align-self: center;
 }
