--- a/less/main.less
+++ b/less/main.less
@@ -9,31 +9,4 @@
 @import "blocks/_nav.less";
 @import "blocks/_hero.less";
 @import "blocks/_news.less";
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+@import "blocks/_help-us.less";
