--- a/css/main.css
+++ b/css/main.css
@@ -521,3 +521,26 @@ body {
   font-weight: bold;
   color: var(--black);
 }
+.social-list {
+  background-color: var(--black);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 20px;
+  padding: 13px 0;
+}
+.social-list__link {
+  padding: 5px;
+}
+.social-list__img {
+  width: var(24px);
+  height: var(24px);
+}
+.copyright {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 12px;
+  color: var(--text-muted);
+  padding: 3px 0;
+}
