--- a/less/base/_vars.less
+++ b/less/base/_vars.less
@@ -12,9 +12,13 @@
 
     --ui-click: #688B05;
     --ui-hover:#BAE249;
+    --ui-hover2: #91AC46;
     --ui-disable: #899D9D;
+    --ui-focus: #83A440;
 
 }
+
+
 
 .retina-bg (@image) {
 @media (-webkit-min-device-pixel-ratio: 2), 
