--- a/less/blocks/_hero.less
+++ b/less/blocks/_hero.less
@@ -24,6 +24,11 @@
     max-width: 635px;
     margin-bottom: 19px;
 }
-.hero .link__text {
+
+.hero .learn-more-link  {
     color: var(--accent);
+}
+
+.hero .learn-more-link:hover{
+    color: var(--ui-hover2);
 }
