--- a/less/blocks/_news.less
+++ b/less/blocks/_news.less
@@ -133,8 +133,9 @@
 .news .learn-more-link {
     position: absolute;
     bottom: 24px;
-}
-
-.link__text {
     color: var(--black);
 }
+.news .learn-more-link:hover{
+    color: var(--green);
+}
+
