--- a/less/blocks/_learn-more-link.less
+++ b/less/blocks/_learn-more-link.less
@@ -3,11 +3,20 @@
     align-items: center;
     padding: 5px;
     column-gap: 8px;
+    
+    
 }
-.link__text {
+.learn-more-link .link__text {
     font-weight: bold;
     align-self: center;
+    color: inherit;
+    transition: color 0.3s ease;
 }
+
 .link__icon {
     align-self: center;
+    color: inherit;
+    transition: color 0.3s ease;
 }
+
+
