--- a/less/blocks/_nav.less
+++ b/less/blocks/_nav.less
@@ -6,18 +6,18 @@
     align-items: center;
     min-height: 60px;
 }
-.header-wrapper {
+.nav-row {
     display: flex;
     column-gap: min(105px, 10vw);
 }
 
-.header-logo-link {
+.nav__logo-link {
     padding: @link-padding;
 }
-.header-logo-link:focus {
+.nav__logo-link:focus {
     outline: none;
 }
-.header-logo-img {
+.nav__logo-img {
     width: 65px;
     height: 20px;
 }
@@ -39,7 +39,7 @@
     
 }
 
-.header-buttons {
+.nav__buttons {
     display: flex;
     column-gap: min(44px,8vw);
     align-items: center;
