--- a/less/main.less
+++ b/less/main.less
@@ -8,6 +8,9 @@
 @import "blocks/_nav.less";
 @import "blocks/_hero.less";
 @import "blocks/_news.less";
+@import "blocks/_samples.less";
+@import "blocks/_img-number.less";
 @import "blocks/_help-us.less";
-@import "blocks/_footer.less";
+@import "blocks/_form.less";
+@import "blocks/_social-list.less";
 @import "blocks/_learn-more-link.less";
