--- a/less/blocks/_hero.less
+++ b/less/blocks/_hero.less
@@ -12,7 +12,7 @@
     background-position: center;
     background-repeat: no-repeat;
 }
-.hero-title {
+.hero__title {
     font-family: var(--font-title);
     font-size: 60px;
     line-height: 100%;
@@ -20,7 +20,7 @@
     margin-bottom: 16px;
     max-width: 688px;
 }
-.hero-text {
+.hero__text {
     max-width: 635px;
     margin-bottom: 19px;
 }
