--- a/less/main.less
+++ b/less/main.less
@@ -9,6 +9,7 @@
 @import "blocks/_hero.less";
 @import "blocks/_news.less";
 @import "blocks/_samples.less";
+@import "blocks/_side.less";
 @import "blocks/_img-number.less";
 @import "blocks/_help-us.less";
 @import "blocks/_form.less";
