--- a/less/blocks/_hero.less
+++ b/less/blocks/_hero.less
@@ -30,8 +30,9 @@
 
 .hero .learn-more-link  {
     color: var(--accent);
+
+    &:hover{
+        color: var(--ui-hover2);
+    }
 }
 
-.hero .learn-more-link:hover{
-    color: var(--ui-hover2);
-}
