--- a/less/blocks/_learn-more-link.less
+++ b/less/blocks/_learn-more-link.less
@@ -4,13 +4,12 @@
     padding: 5px;
     column-gap: 8px;
     
-    
-}
-.learn-more-link .link__text {
-    font-weight: bold;
-    align-self: center;
-    color: inherit;
-    transition: color 0.3s ease;
+    .link__text {
+        font-weight: bold;
+        align-self: center;
+        color: inherit;
+        transition: color 0.3s ease;
+    }
 }
 
 .link__icon {
