--- a/less/blocks/_news.less
+++ b/less/blocks/_news.less
@@ -22,8 +22,10 @@
     position: absolute;
     bottom: 24px;
     color: var(--black);
+
+    &:hover{
+        color: var(--green);
+    }
 }
-.news .learn-more-link:hover{
-    color: var(--green);
-}
+
 
