--- a/less/blocks/_social-list.less
+++ b/less/blocks/_social-list.less
@@ -14,12 +14,13 @@
 
 .social-list__img {
     color: var(--text-muted);
-}
-.social-list__img:hover {
-    color: var(--ui-hover);
-}
-.social-list__img:active {
-    color: var(--ui-click);
+    &:hover {
+        color: var(--ui-hover);
+    }
+
+    &:active {
+        color: var(--ui-click);
+    }
 }
 
 .copyright{
