--- a/less/blocks/_img-number.less
+++ b/less/blocks/_img-number.less
@@ -1,4 +1,4 @@
-.img-number{
+.img-number {
     position: relative;
 
     &::after {
@@ -8,7 +8,7 @@
 
         border: solid 1px var(--text-muted);
         border-radius: 100%;
-        
+
         display: flex;
         align-items: center;
         justify-content: center;
@@ -20,34 +20,46 @@
     }
 }
 
-.number-polypody{
+.number-polypody {
     position: relative;
     left: -37px;
 }
-.number-moss-small::after{
+
+.number-moss-small::after {
     bottom: 0;
 }
+
 .number-moss::after {
     top: 0;
     right: -13px;
 }
+
 .number-stick::after {
     top: 34px;
     left: 130px;
 }
+
 .number-flower::after {
     top: 187px;
     left: 50%;
 }
+
 .number-polypody::after {
     bottom: 0;
     right: 20px;
 }
+
 .number-bark::after {
     top: 0;
     right: -8px;
 }
+
 .number-flower-closed::after {
     bottom: 0;
     left: 54px;
+}
+
+.number-plant::after {
+    top: -14px;
+    left: 0;
 }
