--- a/less/main.less
+++ b/less/main.less
@@ -15,3 +15,6 @@
 @import "blocks/_form.less";
 @import "blocks/_social-list.less";
 @import "blocks/_learn-more-link.less";
+@import "blocks/_gallery.less";
+@import "blocks/_slider.less";
+@import "blocks/_card.less";
