--- a/css/main.css
+++ b/css/main.css
@@ -354,6 +354,11 @@ input:focus:not(:focus-visible) {
   background-position: center;
   background-repeat: no-repeat;
 }
+@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
+  .hero {
+    background-image: linear-gradient(rgba(29, 47, 48, 0.7), rgba(29, 47, 48, 0.7)), url('../../img/bg/hero-bg@3x.jpg');
+  }
+}
 .hero__title {
   font-family: var(--font-title);
   font-size: 60px;
@@ -372,10 +377,10 @@ input:focus:not(:focus-visible) {
 .hero .learn-more-link:hover {
   color: var(--ui-hover2);
 }
-.news {
+.about {
   padding-bottom: 60px;
 }
-.news__title {
+.about__title {
   font-family: var(--font-title);
   font-size: 48px;
   font-weight: bold;
@@ -383,17 +388,17 @@ input:focus:not(:focus-visible) {
   line-height: 100%;
   margin-bottom: 30px;
 }
-.news-row {
+.about-row {
   display: grid;
   grid-template-columns: 1fr 255px;
   column-gap: 30px;
 }
-.news .learn-more-link {
+.about .learn-more-link {
   position: absolute;
   bottom: 24px;
   color: var(--black);
 }
-.news .learn-more-link:hover {
+.about .learn-more-link:hover {
   color: var(--green);
 }
 .samples {
@@ -510,6 +515,11 @@ input:focus:not(:focus-visible) {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+}
+@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
+  .help-us {
+    background-image: linear-gradient(rgba(29, 47, 48, 0.7), rgba(29, 47, 48, 0.7)), url('../../img/bg/help-bg@3x.jpg');
+  }
 }
 .help-us__title {
   font-family: var(--font-title);
