--- a/less/blocks/_about.less
+++ b/less/blocks/_about.less
@@ -1,8 +1,8 @@
-.news {
+.about {
     padding-bottom: 60px;
 }
 
-.news__title {
+.about__title {
     font-family: var(--font-title);
     font-size: 48px;
     font-weight: bold;
@@ -11,14 +11,14 @@
     margin-bottom: 30px;
 }
 
-.news-row {
+.about-row {
     display: grid;
     grid-template-columns: 1fr 255px;
     column-gap: 30px;
 }
 
 
-.news .learn-more-link {
+.about .learn-more-link {
     position: absolute;
     bottom: 24px;
     color: var(--black);
