--- a/less/blocks/_hero.less
+++ b/less/blocks/_hero.less
@@ -13,6 +13,8 @@
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+
+    .retina-bg('./../../img/bg/hero-bg@3x.jpg');
 }
 .hero__title {
     font-family: var(--font-title);
