--- a/less/main.less
+++ b/less/main.less
@@ -7,7 +7,7 @@
 // Blocks
 @import "blocks/_nav.less";
 @import "blocks/_hero.less";
-@import "blocks/_news.less";
+@import "blocks/_about.less";
 @import "blocks/_samples.less";
 @import "blocks/_side.less";
 @import "blocks/_img-number.less";
