--- a/less/blocks/_help-us.less
+++ b/less/blocks/_help-us.less
@@ -13,6 +13,8 @@
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+
+    .retina-bg('./../../img/bg/help-bg@3x.jpg');
 }
 .help-us__title {
     font-family: var(--font-title);
