--- a/less/base/_base.less
+++ b/less/base/_base.less
@@ -12,6 +12,12 @@ html, body {
     
 }
 
+.swiper-button-disabled {
+    opacity: 0.3;
+    pointer-events: none;
+}
+
+
 a:focus,
 button:focus, 
 input:focus  {
