--- a/less/main.less
+++ b/less/main.less
@@ -1,4 +1,3 @@
-
 // Base
 @import "base/_reset.less";
 @import "base/_vars.less";
@@ -18,6 +17,26 @@
 @import "blocks/_gallery.less";
 @import "blocks/_slider.less";
 @import "blocks/_card.less";
+@import "blocks/_swiper.less";
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
