--- a/less/blocks/_card.less
+++ b/less/blocks/_card.less
@@ -1,22 +1,36 @@
 .card {
-    width: 255px;
+    display: flex;
+    flex-direction: column;
+    
+    box-sizing: border-box;
     border: solid 1px var(--black);
+    width: 255px;
 }
 
 .card__photo {
-    background-color: var(--black);
-    padding: 30px 16px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    padding: 5px;
     height: 180px;
+
+    background-color: var(--black);
+}
+.card__img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
 }
 
 .card__desc {
-    padding: 16px;
-    padding-bottom: 24px;
-    height: 313px;
-
     display: flex;
 	flex-direction: column;
 	gap: 8px;
+
+    padding: 16px;
+    padding-bottom: 24px;
+    height: 313px;   
 }
 .card__title {
     font-family: var(--font-title);
@@ -52,3 +66,6 @@
         background: none;
     }
 }
+
+
+  
