--- a/less/blocks/_help-us.less
+++ b/less/blocks/_help-us.less
@@ -14,6 +14,8 @@
     background-position: center;
     background-repeat: no-repeat;
 
+    display: none;
+
     .retina-bg('./../../img/bg/help-bg@3x.jpg');
 }
 .help-us__title {
