--- a/less/blocks/_hero.less
+++ b/less/blocks/_hero.less
@@ -42,3 +42,30 @@
     }
 }
 
+@media (max-width: 880px) {
+    .hero__title {
+        font-size: 56px;
+    }
+}
+
+@media (max-width: 540px) {
+    .hero__title {
+        font-size: 48px;
+    }
+    .hero__text {
+        display: none;
+    }
+
+    .hero {
+        min-height: 40vh;
+    }
+    
+}
+
+@media (max-width: 270px) {
+    .hero__title {
+        font-size: 30px;
+    }
+    
+}
+
