--- a/less/blocks/_nav.less
+++ b/less/blocks/_nav.less
@@ -1,14 +1,15 @@
 @link-padding: 10px;
 
 .nav {
-    display:flex;
+    display: flex;
     justify-content: space-between;
     align-items: center;
     min-height: 60px;
 }
+
 .nav-row {
     display: flex;
-    column-gap: min(105px, 10vw);
+    column-gap: 125px;
 }
 
 .nav__logo-link {
@@ -26,9 +27,10 @@
 
 .nav-menu {
     display: flex;
-    column-gap: min(44px,8vw);
+    column-gap: 64px;
     align-items: center;
 }
+
 .nav-menu__link {
     padding: @link-padding;
     transition: color 0.3s ease;
@@ -38,15 +40,16 @@
     }
 
     &:active {
-        color: var(--ui-click);   
+        color: var(--ui-click);
     }
 }
 
 .nav__buttons {
     display: flex;
-    column-gap: min(44px,8vw);
+    column-gap: 64px;
     align-items: center;
 }
+
 .search,
 .log-in {
     padding: @link-padding;
@@ -60,3 +63,83 @@
         color: var(--ui-click);
     }
 }
+
+
+@media (max-width: 1100px) {
+    .nav-row {
+        column-gap: 100px;
+    }
+
+    .nav__buttons {
+        column-gap: 30px;
+    }
+}
+
+@media (max-width: 1000px) {
+    .nav-menu {
+        column-gap: 30px;
+    }
+
+    .nav__buttons svg {
+        width: 20px;
+        height: auto;
+    }
+}
+
+@media (max-width: 870px) {
+    .nav-row {
+        column-gap: 50px;
+    }
+
+    .nav-menu {
+        column-gap: 20px;
+    }
+
+    .nav__buttons {
+        column-gap: 15px;
+    }
+}
+
+@media (max-width: 768px) {
+    .nav {
+        position: relative;
+    }
+
+    .nav-row {
+        column-gap: 30px;
+    }
+
+    .nav-menu {
+        column-gap: 10px;
+        position: absolute;
+        
+        bottom: -40px;
+        left: 50%;
+        transform: translateX(-50%);
+
+        max-width: 100%;
+        z-index: 5;
+
+        
+        -ms-overflow-style: none;
+        overflow-x: auto;
+        white-space: nowrap;
+        scrollbar-width: none;
+        overflow-y: hidden;
+    }
+
+    
+    .nav-menu::-webkit-scrollbar {
+        display: none; 
+    }
+
+    .nav__logo-img {
+        width: 45px;
+        height: auto;
+    }
+
+    .nav__buttons svg {
+        width: 15px;
+    }
+}
+
